--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
     }
   ],
   "require": {
-    "php": ">=5.5",
+    "php": ">=8.0",
     "ext-mbstring": "*",
-    "symfony/property-access": "^2.8 || ^3.4 || ^4.4"
+    "symfony/property-access": "5.4.*|6.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "*",
+    "rector/rector": "^0.14.0"
   },
   "autoload": {
     "psr-4": {
