--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": ">=8.0",
     "ext-mbstring": "*",
-    "symfony/property-access": "5.4.*|6.*"
+    "symfony/property-access": "5.4.*|6.*|7.*"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
